manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcolor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webcolor
  template:
    metadata:
      labels:
        app: webcolor
    spec:
      automountServiceAccountToken: false
      containers:
      - name: webcolor
        image: kubedevio/web-color:green
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
            ephemeral-storage: "512Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
            ephemeral-storage: "1Gi"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webcolor
spec:
  selector:
    app: webcolor
  ports:
  - port: 80  
    targetPort: 80
  type: NodePort
